hopefully rss works

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -1,75 +1,6 @@
 ---
-title: Post One
-date: '2021-12-14'
+title: Such empty...
+date: '2024-04-18'
 ---
-Sure, here's an example Markdown document with multiple sections, each containing code blocks:
 
-**Bold text**
-
-_Italic_
-
-```js
-console.log("{}" + {} + () - Math)
-```
-
-_**Both**_
-
-
-> And I quote
-> Multiple
-
-
-
-# Header gin
-
-fjdksafjkdalfjklaskfjdsakfdjksafd
-
-
-# another
-
-fdsajkfjkdafdklasfjkladsjfkl;
-Sure, here's an example Markdown document with multiple sections, each containing code blocks:
-
-# My Markdown Example
-
-## Section 1: Introduction
-
-This is an introduction to my Markdown example.
-
-## Section 2: Code Samples
-
-### Subsection 1: Python
-
-```python
-def greet(name):
-    print("Hello, " + name + "!")
-```
-
-### Subsection 2: JavaScript
-
-```javascript
-function greet(name) {
-    console.log("Hello, " + name + "!");
-}
-```
-
-### Subsection 3: HTML
-
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello, World!</h1>
-</body>
-</html>
-```
-
-## Section 3: Conclusion
-
-That's all for my Markdown example. Thanks for reading!
-
+Wow such empty...don't expect much
