proper latex support

--- a/src/data/blog/1.md
+++ b/src/data/blog/1.md
@@ -4,3 +4,8 @@ date: '2024-04-18'
 ---
 
 Wow such empty... I'll write something soon tm. Hopefully.
+
+$$
+\text{has latex support} = e^{i \pi} + 2
+$$
+
