--- a/src/data/blog/2.md
+++ b/src/data/blog/2.md
@@ -106,3 +106,9 @@ This is due to the fact that $\cos(2\pi3t)$ is indistinguishable from $\cos(2\pi
 1. [Fourier coefficients - YouTube](https://youtu.be/_htCsieA0_U?si=NTUlbCqICabXKWMK)
 2. [Fourier transform - Wikiwand](https://www.wikiwand.com/en/Fourier%20transform)
 3. [Frequency domain - Wikiwand](https://www.wikiwand.com/en/Frequency_domain)
+
+---
+
+# Why did I write this?
+
+Thanks for reading! Although this is a very well explained topic I couldn't really understand it for a while. Writing this is more for my own understanding than for the reader tbh, I did learn a lot by writing this.
