--- a/src/data/blog/2.md
+++ b/src/data/blog/2.md
@@ -9,7 +9,7 @@ The Fourier transform **decomposes** a waveform or signal into its constituent s
 
 Look at this image here: It's actually made up of a bunch of waves stacked on top of each other. All waves are like this.
 
-<img width="400" alt="a cross sectional view of the time domain and frequency domain representations" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Finsightincmiami.org%2Fwp-content%2Fuploads%2F2019%2F06%2Ffourier-transform-visualized.jpg&f=1&nofb=1&ipt=9a9f773ec829f3818ec23a5c2b94682cdc3fcfbc72435d0dfff0edf86227f3e7&ipo=images" />
+<img width="400" alt="a cross sectional view of the time domain and frequency domain representations" src="https://utfs.io/f/60d99422-42f0-4662-9ebc-52e4127ba956-kepss.png" />
 
 In the image, we're seeing the strength or **power** of each frequency that makes up the input wave.
 
