--- a/src/data/blog/2.md
+++ b/src/data/blog/2.md
@@ -1,6 +1,6 @@
 ---
 title: A somewhat correct Fourier Transformation explaination
-date: '2024-04-20'
+date: "2024-04-20"
 ---
 
 # What does it do?
@@ -97,7 +97,6 @@ It is with this phase information that the make up of a wave at frequency _k_ ca
 Here is the result. Isn't it beautiful? But why is there a response at -3 Hz?
 
 This is due to the fact that $\cos(2\pi3t)$ is indistinguishable from $\cos(2\pi(-3)t)$.
-
 
 ?> **On symmetry: ** The reason for the response at -3 Hz is that the Fourier transform is a symmetric operation, and the Fourier transform of a real-valued function is conjugate-symmetric (or Hermitian-symmetric). This means that the Fourier transform at a positive frequency is the complex conjugate of the Fourier transform at the corresponding negative frequency.
 
