--- a/src/data/blog/2.md
+++ b/src/data/blog/2.md
@@ -100,6 +100,8 @@ This is due to the fact that $\cos(2\pi3t)$ is indistinguishable from $\cos(2\pi
 
 ?> **On symmetry: ** The reason for the response at -3 Hz is that the Fourier transform is a symmetric operation, and the Fourier transform of a real-valued function is conjugate-symmetric (or Hermitian-symmetric). This means that the Fourier transform at a positive frequency is the complex conjugate of the Fourier transform at the corresponding negative frequency.
 
+x> **Error in notation**: denoting the result as $\hat{f}(t)$ is probably wrong. It should be $\hat{f}(\xi)$, as the result is a function of frequency, not time.
+
 # Sources
 
 1. [Fourier coefficients - YouTube](https://youtu.be/_htCsieA0_U?si=NTUlbCqICabXKWMK)
