--- a/src/data/blog/2.md
+++ b/src/data/blog/2.md
@@ -9,7 +9,7 @@ The Fourier transform **decomposes** a waveform or signal into its constituent s
 
 Look at this image here: It's actually made up of a bunch of waves stacked on top of each other. All waves are like this.
 
-<img width="400" alt="a cross sectional view of the time domain and frequency domain representations" src="https://utfs.io/f/60d99422-42f0-4662-9ebc-52e4127ba956-kepss.png" />
+<img width="400" alt="a cross sectional view of the time domain and frequency domain representations" src="https://studyelectrical.com/wp-content/uploads/2023/05/Time-domain-vs-frequency-domain-measurements-1.png" />
 
 In the image, we're seeing the strength or **power** of each frequency that makes up the input wave.
 
@@ -29,7 +29,7 @@ The time domain and frequency domain representations are complementary views of 
 
 The input of a Fourier transform will be denoted as $f(t)$, and the output will be denoted as $\hat{f}(t)$.
 
-<img src="https://utfs.io/f/6638466f-1fca-40ec-b4c4-b0ddd87ab6d4-cpvua4.webp" alt="a morlet function graph" />
+<img src="https://neurodsp-tools.github.io/neurodsp/_images/sphx_glr_plot_MorletWavelet_004.png" alt="a morlet function graph" />
 
 The function above is $f(t) = cos(2\pi 3t)\exp(-\pi t^2)$. It is a cosine wave that oscillates at 3Hz (assuming t is seconds) and tends quickly to 0. (The second factor in this equation is an [envelope function](<https://www.wikiwand.com/en/Envelope_(waves)> "Envelope (waves)") shown in red that shapes the continuous sinusoid into a short pulse.) - [Fourier transform - Wikiwand](https://www.wikiwand.com/en/Fourier_transform)
 
